<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity"
    android:padding="30sp"
    android:background="#EED8F3">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:text="@string/developer"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#272323"
        tools:layout_editor_absoluteX="156dp"
        tools:layout_editor_absoluteY="189dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_below="@id/textView"
        android:layout_marginTop="112dp"
        android:contentDescription="@string/dev_img"
        android:layout_centerVertical="true"
        app:srcCompat="@drawable/avatar1" />

    <TextView
        android:id="@+id/textView4"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_centerInParent="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="116dp"
        android:layout_toEndOf="@id/imageView2"
        android:text="@string/dev_name" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView4"
        android:layout_marginStart="25dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/imageView2"
        android:layout_centerHorizontal="true"
        android:text="@string/gmail"
        android:textColor="#292525" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView5"
        android:layout_marginTop="152dp"
        android:text="@string/back" />
</RelativeLayout>