<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffe11c"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_above="@id/editName"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/desp"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/editName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:autofillHints="name"
        android:ems="13"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        android:textColor="#100F0F" />

    <Button
        android:id="@+id/button_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_about"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:backgroundTint="#E12A2A"
        android:text="@string/start"
        android:textColor="#ffffff"
        android:textSize="30sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:id="@+id/button_about"
        android:textSize="30sp"
        android:layout_marginBottom="33dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#01579B"
        android:textColor="#ffffff" />
</RelativeLayout>
