<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Quiz"
    android:background="#d9d2e9">

    <TextView
        android:id="@+id/user_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#3d85c6" />

    <RadioGroup
        android:id="@+id/rd_btn_grp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/op1" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/op2"/>

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/op3"/>

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/op4"/>
    </RadioGroup>

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rd_btn_grp"
        android:layout_marginTop="18dp"
        android:layout_alignParentEnd="true"
        android:backgroundTint="#E12A2A"
        android:text="@string/nq"
        />
    <Button
        android:id="@+id/button_quit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/quit"
        android:layout_below="@id/button3"
        />
    <TextView
        android:id="@+id/textques"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="23sp"
        android:textColor="@color/black"
        android:layout_marginBottom="50sp"
        android:layout_above="@id/rd_btn_grp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10sp"
        android:text="Your Score"
        android:textColor="#252121"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:textAppearance="@color/black"
        android:layout_marginBottom="10sp"
        android:text="0"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:textSize="23sp" />


</RelativeLayout>